--- a/src/index.css
+++ b/src/index.css
@@ -39,13 +39,23 @@ button:focus-visible {
   outline-style: none;
 }
 
+.btn-noeffect {
+  border:none;
+  background-color: transparent;
+}
+
+.btn-noeffect:hover {
+  border:none;
+  background-color: transparent;
+}
+
 .card {
   padding: 2em;
 }
 
 #app {
   max-width: 1280px;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 /* My custom */
@@ -73,6 +83,96 @@ button:focus-visible {
 .element-listitem-evenrow{
   border-radius: 4px;
   background-color: rgb(255, 255, 255);
+}
+
+.element-input-style1 {
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-color: silver;
+  border-width: 1px;
+  font-size: 16px;
+}
+
+.element-input-style1:focus {
+  outline:none;
+}
+
+.element-input-style2 {
+  border : 0;
+  font-size: 16px;
+}
+.element-scrollable-div {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.element-scrollable-div::-webkit-scrollbar {
+  width: 12px; /* 스크롤바를 숨김 */
+}
+
+.element-scrollable-div::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.element-scrollable-div::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+  transition: 0.2s;
+}
+
+.element-scrollable-div:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: 0.2s;
+}
+
+.btn-add {
+  width:16px;
+  height: 16px;
+  border-radius: 8px;
+  background-color: #68d962;
+}
+
+.btn-add:hover {
+  width:16px;
+  height: 16px;
+  border-radius: 8px;
+  background-color: #4da149;
+}
+
+.btn-remove {
+  width:16px;
+  height: 16px;
+  border-radius: 8px;
+  background-color: #ff613c;
+}
+
+.btn-remove:hover {
+  width:16px;
+  height: 16px;
+  border-radius: 8px;
+  background-color: #c64a2e;
+}
+
+/* Status Stack */
+.service-status-stack {
+  position: absolute;
+  bottom:50px;
+}
+
+.service-status-common {
+  color:white;
+  box-shadow: 0px 4px 8px rgb(0, 0, 0, 0.3);
+}
+
+.status-ok {
+  background-color: #68d962;
+}
+
+.status-alert {
+  background-color: #ff613c;
 }
 
 
